fix digital page alignment for mobile

--- a/style/digital.css
+++ b/style/digital.css
@@ -54,3 +54,6 @@ h1{
     letter-spacing: 3px;
     color: #3b3b3b;
 }
+a{
+    margin-top: 1%;
+}
